@@ -32,14 +32,3 @@ Suggests: lilypond (>= ${Source-Version}), postscript-viewer, www-browser
 Description: LilyPond Documentation in HTML, PS and DVI formats
  This package contains the HTML, PostScript and DVI documentation for the
  LilyPond music typesetting software.
-
-Package: lilypond1.3
-Architecture: arm i386 m68k powerpc sparc
-Depends: lilypond (>= ${Source-Version})
-Description: Dummy package for transition to new stable lilypond.
- This dummy package provides a transition from the previous lilypond1.3
- package back to a newer lilypond because the stable 1.4 and now 1.6 series
- have arrived.
- .
- Please feel free to remove this dummy package after you have upgraded
- to the latest lilypond.
