@@ -2,4 +2,4 @@
 # Rename this file to "watch" and then you can run the "uscan" command
 # to check for upstream updates and more.
 # Site		Directory		Pattern			Version	Script
-ftp.cs.uu.nl	/pub/GNU/LilyPond/v1.5	lilypond-*.tar.gz	debian	uupdate
+ftp.lilypond.org	/pub/LilyPond/v1.6	lilypond-*.tar.gz	debian	uupdate
