@@ -3,10 +3,11 @@ lilypond (1.6.9-1) unstable; urgency=low
   * New upstream release.
   * Depend on mftrace iso pktrace.
   * Add guile-1.6-dev as alternative dependency to libguile-dev
+  * Bugfix for docdir when with changed package name.
   * Remove netpbm, bibtex2html dependencies.
   * Remove gcc-3.x/lexer kludge.
 
- --  <janneke@gnu.org>  Tue, 15 Apr 2003 14:25:54 +0200
+ -- Jan Nieuwenhuizen <janneke@gnu.org>  Tue, 15 Apr 2003 14:25:54 +0200
 
 lilypond (1.6.6-2) unstable; urgency=high
 
